      
    - Changed the name of PropertyLoader to
      RelationProperty, to be consistent
      with all the other names.  PropertyLoader is 
      still present as a synonym.
    
    - fixed "double iter()" call causing bus errors
      in shard API, removed errant result.close()
      left over from the 0.4 version. [ticket:1099]
      [ticket:1228]
      
- sql
    - Fixed the import weirdness in sqlalchemy.sql
      to not export __names__ [ticket:1215].
      
    - Added NotImplementedError for params() method
      on Insert/Update/Delete constructs.  These items
      currently don't support this functionality, which
      also would be a little misleading compared to
      values().

    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

- documentation
    - Tickets [ticket:1200] [ticket:1149].
      
    - Added note about create_session() defaults.
    
    - Added section about metadata.reflect().
    
    - Updated `TypeDecorator` section.
    
    - Rewrote the "threadlocal" strategy section of 
      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.
      
0.5.0rc4
========
- features
- orm
    - Query.count() has been enhanced to do the "right
      thing" in a wider variety of cases. It can now
      count multiple-entity queries, as well as
      column-based queries. Note that this means if you
      say query(A, B).count() without any joining
      criterion, it's going to count the cartesian
      product of A*B. Any query which is against
      column-based entities will automatically issue